VMS-3395: Word wrapping fixes in email templates
<==== Mercurial data ====>
Branch: dev_3.0.0_web

--- a/mediaserver/maven/bin-resources/resources/email_templates/style.css
+++ b/mediaserver/maven/bin-resources/resources/email_templates/style.css
@@ -177,3 +177,11 @@ td.number{
     padding-right:5px;
     width:0;
 }
+
+.source-name{
+    text-overflow: ellipsis;
+    overflow: hidden;
+    display: inline-block;
+    white-space: nowrap;
+    max-width: 130px;
+}
